--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    // TypeScript support for emotion
+    "jsxImportSource": "@emotion/react",
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
